force-app/main/default/objects/TCP_P94_Staging_object__c/TCP_P94_Staging_object__c.object-meta.xml
<CustomObject>
    <description>TCP P94 Staging Object</description>
    <label>TCP P94 Staging object</label>
    <nameField>
        <label>TCP P94 Staging object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TCP P94 Staging object</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>