force-app/main/default/objects/TCP_P94_Staging_object__c/fields/Billing_Block__c.field-meta.xml
<CustomField>
    <fullName>Billing_Block__c</fullName>
    <label>Billing Block</label>
    <length>2</length>
    <type>Text</type>
</CustomField>