force-app/main/default/objects/TCP_P94_Staging_object__c/fields/CMIR_External_Id__c.field-meta.xml
<CustomField>
    <fullName>CMIR_External_Id__c</fullName>
    <description>Customer Number +  Material Number + Sales Org + Distribution Channel ex:(1234235333301USN606)</description>
    <label>CMIR ExternalID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>