force-app/main/default/objects/TCP_P94_Staging_object__c/fields/Cust_Matr__c.field-meta.xml
<CustomField>
    <fullName>Cust_Matr__c</fullName>
    <description>Material Number Used by Customer</description>
    <label>Customer Material</label>
    <length>255</length>
    <type>Text</type>
</CustomField>