force-app/main/default/objects/TCP_P94_Staging_object__c/fields/Cust_Matr_Description__c.field-meta.xml
<CustomField>
    <fullName>Cust_Matr_Description__c</fullName>
    <description>Customer description of material</description>
    <label>Customer Material Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>