force-app/main/default/objects/TCP_P94_Staging_object__c/fields/Cust_No_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Cust_No_External_Id__c</fullName>
    <description>SPCustomerNo +Sales Org + DC +Divison + SPCustomerNo + Partner Function
SPCustomerNo +Sales Org + DC +Divison + SHCustomerNo + Partner Function
SPCustomerNo +Sales Org + DC +Divison + PYCustomerNo + Partner Function
SPCustomerNo +Sales Org + DC +Divison + BPCustomerNo + Partner Function</description>
    <label>Customer No ExternalID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>