force-app/main/default/objects/TCP_P94_Staging_object__c/fields/Data_Type__c.field-meta.xml
<CustomField>
    <fullName>Data_Type__c</fullName>
    <description>&apos;CUST&apos; for Customer Master Data, &apos;MATR&apos; for Material Master Data and &apos;CMIR&apos; for CMIR Data</description>
    <label>Data Type</label>
    <length>4</length>
    <type>Text</type>
</CustomField>