force-app/main/default/objects/TCP_P94_Staging_object__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <description>Date</description>
    <label>Date</label>
    <type>Date</type>
</CustomField>