force-app/main/default/objects/TCP_P94_Staging_object__c/fields/Deletion_flag__c.field-meta.xml
<CustomField>
    <fullName>Deletion_flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deletion flag</label>
    <type>Checkbox</type>
</CustomField>