force-app/main/default/objects/TCP_P94_Staging_object__c/fields/Delivery_Block__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Block__c</fullName>
    <label>Delivery Block</label>
    <length>2</length>
    <type>Text</type>
</CustomField>