force-app/main/default/objects/TCP_P94_Staging_object__c/fields/Full_load__c.field-meta.xml
<CustomField>
    <fullName>Full_load__c</fullName>
    <label>Full load</label>
    <length>1</length>
    <type>Text</type>
</CustomField>