force-app/main/default/objects/TCP_P94_Staging_object__c/fields/Gross_Weight__c.field-meta.xml
<CustomField>
    <fullName>Gross_Weight__c</fullName>
    <description>Gross Weight</description>
    <label>Gross Weight</label>
    <precision>9</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>