force-app/main/default/objects/TCP_P94_Staging_object__c/fields/Incoterms1__c.field-meta.xml
<CustomField>
    <fullName>Incoterms1__c</fullName>
    <label>Incoterms1</label>
    <length>3</length>
    <type>Text</type>
</CustomField>