force-app/main/default/objects/TCP_P94_Staging_object__c/fields/Incoterms2__c.field-meta.xml
<CustomField>
    <fullName>Incoterms2__c</fullName>
    <label>Incoterms2</label>
    <length>28</length>
    <type>Text</type>
</CustomField>