force-app/main/default/objects/TCP_P94_Staging_object__c/fields/Is_Cust_Processed__c.field-meta.xml
<CustomField>
    <fullName>Is_Cust_Processed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>by default False, if the record is successfully inserted then mark it as True</description>
    <label>Is Customer Processed</label>
    <type>Checkbox</type>
</CustomField>