force-app/main/default/objects/TCP_P94_Staging_object__c/fields/Material_Description__c.field-meta.xml
<CustomField>
    <fullName>Material_Description__c</fullName>
    <description>Material Description</description>
    <label>Material Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>