force-app/main/default/objects/TCP_P94_Staging_object__c/fields/Material_Number__c.field-meta.xml
<CustomField>
    <fullName>Material_Number__c</fullName>
    <description>Material Number</description>
    <label>Material Number</label>
    <length>18</length>
    <type>Text</type>
</CustomField>