force-app/main/default/objects/TCP_P94_Staging_object__c/fields/Net_Weight__c.field-meta.xml
<CustomField>
    <fullName>Net_Weight__c</fullName>
    <description>Net Weight</description>
    <label>Net Weight</label>
    <precision>9</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>