force-app/main/default/objects/TCP_P94_Staging_object__c/fields/Order_Block__c.field-meta.xml
<CustomField>
    <fullName>Order_Block__c</fullName>
    <label>Order Block</label>
    <length>2</length>
    <type>Text</type>
</CustomField>