force-app/main/default/objects/TCP_P94_Staging_object__c/fields/Partner_Account_Group__c.field-meta.xml
<CustomField>
    <fullName>Partner_Account_Group__c</fullName>
    <description>Partner customer Account Group</description>
    <label>Partner Account Group</label>
    <length>4</length>
    <type>Text</type>
</CustomField>