force-app/main/default/objects/TCP_P94_Staging_object__c/fields/Partner_Counter__c.field-meta.xml
<CustomField>
    <fullName>Partner_Counter__c</fullName>
    <label>Partner Counter</label>
    <length>3</length>
    <type>Text</type>
</CustomField>