force-app/main/default/objects/TCP_P94_Staging_object__c/fields/Partner_Number__c.field-meta.xml
<CustomField>
    <fullName>Partner_Number__c</fullName>
    <label>Partner Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>