force-app/main/default/objects/TCP_P94_Staging_object__c/fields/Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms__c</fullName>
    <description>Payment Terms</description>
    <label>Payment Terms</label>
    <length>80</length>
    <type>Text</type>
</CustomField>