force-app/main/default/objects/TCP_P94_Staging_object__c/fields/Prod_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Prod_External_Id__c</fullName>
    <description>Product Code(Material Code) + Sales Org + Distribution Channel ex:(8001498USN606)</description>
    <label>Product ExternalID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>