force-app/main/default/objects/TCP_P94_Staging_object__c/fields/Prod_Salesline_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Prod_Salesline_External_Id__c</fullName>
    <description>Sales Org + Distribution Channel ex:(USN606/XA040602)</description>
    <label>Product Salesline ExternalID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>