force-app/main/default/objects/TCP_P94_Staging_object__c/fields/Sales_Area_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Sales_Area_External_Id__c</fullName>
    <description>Sales Org + Distribution Channel +Division</description>
    <label>Sales Area ExternalID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>