force-app/main/default/objects/TCP_P94_Staging_object__c/fields/Shipping_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Conditions__c</fullName>
    <label>Shipping Conditions</label>
    <length>2</length>
    <type>Text</type>
</CustomField>