force-app/main/default/objects/TCP_P94_Staging_object__c/fields/Sold_To__c.field-meta.xml
<CustomField>
    <fullName>Sold_To__c</fullName>
    <label>Sold To</label>
    <length>10</length>
    <type>Text</type>
</CustomField>