force-app/main/default/objects/TCP_P94_Staging_object__c/fields/Sold_To_Account_Group__c.field-meta.xml
<CustomField>
    <fullName>Sold_To_Account_Group__c</fullName>
    <description>Sold To customer Account Group</description>
    <label>Sold To Account Group</label>
    <length>4</length>
    <type>Text</type>
</CustomField>