force-app/main/default/objects/TCP_P94_Staging_object__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>State</label>
    <length>35</length>
    <type>Text</type>
</CustomField>