force-app/main/default/objects/TCP_P94_Staging_object__c/fields/TCP_CMIR_Deletion_Flag__c.field-meta.xml
<CustomField>
    <fullName>TCP_CMIR_Deletion_Flag__c</fullName>
    <description>&quot;Flag marked for CMIR record deletion
Default value (Y) in case of record deletion&quot;</description>
    <label>CMIR Deletion Flag</label>
    <length>1</length>
    <type>Text</type>
</CustomField>