force-app/main/default/objects/TCP_P94_Staging_object__c/fields/TCP_CMIR_Time__c.field-meta.xml
<CustomField>
    <fullName>TCP_CMIR_Time__c</fullName>
    <label>CMIR Time</label>
    <length>8</length>
    <type>Text</type>
</CustomField>