force-app/main/default/objects/TCP_P94_Staging_object__c/fields/Time__c.field-meta.xml
<CustomField>
    <fullName>Time__c</fullName>
    <description>Time</description>
    <label>Time</label>
    <type>Time</type>
</CustomField>