force-app/main/default/objects/TCP_P94_Staging_object__c/fields/VAT_Reg_No__c.field-meta.xml
<CustomField>
    <fullName>VAT_Reg_No__c</fullName>
    <description>VAT Reg No.</description>
    <label>VAT Reg No</label>
    <length>20</length>
    <type>Text</type>
</CustomField>